--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 <body>
     <h1>Добро пожаловать!</h1>
     <p>Это главная страница моего тестового сайта.</p>
-    
+    <div class="timer-container">
+    <h2>Таймер обратного отсчета</h2>
+    <div class="timer-display">
+        <span id="days">00</span> дней
+        <span id="hours">00</span> часов
+        <span id="minutes">05</span> минут
+        <span id="seconds">00</span> секунд
+    </div>
+</div>
     <img src="image1.jpg" alt="Пример изображения" width="300">
     
     <p>Перейти на <a href="page2.html">вторую страницу</a></p>
