--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html>
 <head>
     <title>Главная страница</title>
+    .timer-container {
+    text-align: center;
+    margin: 30px auto;
+    max-width: 500px;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.timer-display {
+    font-size: 1.5em;
+    margin-top: 15px;
+}
+
+.timer-display span {
+    font-weight: bold;
+    color: #2c3e50;
+    padding: 5px;
+    background-color: #ecf0f1;
+    border-radius: 5px;
+    margin: 0 5px;
+}
 </head>
 <body>
     <h1>Добро пожаловать!</h1>
